# NanoTik

./: .env.example  .gitignore  .replit  COST_ANALYSIS.md  COST_ANALYSIS_OPENROUTER.md  PRICING_VERIFICATION.md  QUICKSTART_VOICE_SETUP.md  README.md  VOICE_PREVIEWS_README.md  VOICE_SYSTEM_SUMMARY.md  app.py  check_voice_previews.py  config.example.toml  generate_previews.bat  generate_previews.sh  generate_voice_previews.py  pyproject.toml  replit.md  run command.txt
.claude/: settings.local.json
.local/state/replit/agent/filesystem/: filesystem_state.json
app/: __init__.py  config.py  database.py
app/models/: __init__.py  user.py
app/services/: __init__.py  auth_service.py  llm_service.py  payment_service.py  splitroute_service.py  subtitle_service.py  video_service.py  voice_preview_service.py
app/utils/: __init__.py  i18n.py  voices.py
webui/: NanoTik.py
